[project]
name = "charon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.0",
    "slack-bolt>=1.23.0",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[project.scripts]
charon = "charon.__main__:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
